# GP2BaseCode

./: CMakeLists.txt
assets/models/: 1.FBX  tank2.FBX
assets/shaders/: TextureFS.glsl  fontFS.glsl  shadowMapFS.glsl  shadowMapVS.glsl  simpleFS.glsl  simplePostProcessFS.glsl  simplePostProcessVS.glsl  simpleVS.glsl  specularFS.glsl  textureVG.glsl
include/: Common.h  FBXLoader.h  GBuffer.h  Graphics.h  Mesh.h  Shader.h  Texture.h  Vertex.h
src/: FBXLoader.cpp  FileSystem.cpp  GBuffer.cpp  Graphics.cpp  Shader.cpp  Texture.cpp  main.cpp
